...
    ModalNavigationDrawer(
        drawerState = drawerState,
        gesturesEnabled = moduleTitle == null,
        drawerContent = {
            ModalDrawerSheet {
                Text(
                    text = "Agendas",
                    style = MaterialTheme.typography.titleMedium,
                    modifier = Modifier.padding(horizontal = 20.dp, vertical = 16.dp),
                )

                LazyColumn(modifier = Modifier.weight(1f)) {
                    item {
...
